concord_macros/tests/trybuild/fail/sema/policy/rate_limit_empty_inline.rs
use concord_macros::api;

api! {
    client EmptyInlineRateLimitApi {
        base "https://example.com"
    }

    GET Ping
        path ["ping"]
        rate_limit {
        }
        -> Json<String>
}

fn main() {}
