concord_macros/tests/trybuild/fail/sema/policy/rate_limit_empty_inline.stderr
error: empty rate_limit block has no effect
  --> tests/trybuild/fail/sema/policy/rate_limit_empty_inline.rs:11:9
   |
11 |         }
   |         ^
